compiling_error.txt
In file included from C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\Cliente.h:8:0,
                 from C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\Exemplar.h:7,
                 from C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\Emprestimo.h:5,
                 from C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\main.cpp:3:
C:\Users\Gustavo\Desktop\Explorer\Programas\POO\Biblioteca-Sem-Lista\Livro.h:50:3: error: 'Exemplar' does not name a type
   Exemplar exemplares[100];
   ^
